# stock-screener-showcase

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN_DECISIONS.md  LICENSE  README.md  SCREENER.md  SCREENER_BUILDER_UI.md  SCREENER_DSL.md  SCREENER_RULE_ENGINE.md
crates/dsl/: Cargo.toml
crates/dsl/src/: expr.rs  lib.rs  pattern.rs  pipeline.rs  types.rs
crates/dsl/src/mod_def/: indicator.rs  intraday.rs  mod.rs  registry.rs
crates/engine/: Cargo.toml
crates/engine/examples/: cli_demo.rs
crates/engine/src/: cache.rs  lib.rs  planner.rs  runner.rs
crates/engine/src/compiler/: expr_compiler.rs  indicator.rs  mod.rs
crates/engine/src/evaluator/: ctx.rs  expr.rs  intraday.rs  mod.rs  point.rs  state_machine.rs
crates/engine/src/matcher/: fallback.rs  mod.rs  polars_pattern.rs
crates/engine/src/provider/: mod.rs  parquet.rs
crates/engine/tests/: batch_verify.rs  check_failing.rs  count_check.rs  debug_pattern_match.rs  edge_cases.rs  expr_correctness.rs  indicator_correctness.rs  isolated_test.rs  manual_check.rs  market_join_test.rs  pattern_correctness.rs  performance.rs  range_pattern_test.rs  screener_rule_test.rs  stage_correctness.rs  verify_results.rs
crates/engine/tests/common/: mod.rs
flutter-screener-ui/: README.md
flutter-screener-ui/lib/features/screener/: screener_compiler.dart  screener_condition_editor.dart  screener_models.dart  (+4 more)
flutter-screener-ui/lib/widgets/: animated_kline_chart.dart  minute_time_chart.dart  stock_list.dart  stock_table.dart
sample_data/: stock.db
sample_data/klines/: 2024.parquet  2025.parquet  2026.parquet
(+25 files in other folders)
