[workspace]
resolver = "2"
members = ["crates/dsl", "crates/engine"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.53.0", default-features = false, features = ["lazy", "rolling_window", "abs", "rank", "fmt", "parquet", "strings", "temporal"] }
thiserror = "2"
anyhow = "1"
rayon = "1"
regex = "1"
indicatif = "0.17"
